{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 42,
  "lineage": "760b7982-7065-b703-fe7e-eaea12a8b7c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:991925387373:instance/i-055e0a71ac8278da1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055e0a71ac8278da1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea63e7ba1bda98fd",
            "private_dns": "ip-10-0-1-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.36",
            "public_ip": "54.92.162.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019038ba07e85d151",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f665cffbd4bf980",
            "tags": {
              "Name": "EC2 Terraform"
            },
            "tags_all": {
              "Name": "EC2 Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5e366748c7c0126"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver",
            "aws_subnet.subnet1",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:internet-gateway/igw-0e9d177d56e8354d7",
            "id": "igw-0e9d177d56e8354d7",
            "owner_id": "991925387373",
            "tags": {
              "CreatedAt": "2023-02-23",
              "Name": "GW VPC SUBNET1 TERRAFORM",
              "Owner": "Douglas"
            },
            "tags_all": {
              "CreatedAt": "2023-02-23",
              "Name": "GW VPC SUBNET1 TERRAFORM",
              "Owner": "Douglas"
            },
            "vpc_id": "vpc-00463f5f56a77e594"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:route-table/rtb-041edd84dda483d68",
            "id": "rtb-041edd84dda483d68",
            "owner_id": "991925387373",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9d177d56e8354d7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00463f5f56a77e594"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_terraform",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0805688703b8fcb82",
            "route_table_id": "rtb-041edd84dda483d68",
            "subnet_id": "subnet-07f665cffbd4bf980"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_terraform",
            "aws_route_table.rt1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0777821492326d2fd",
            "route_table_id": "rtb-041edd84dda483d68",
            "subnet_id": "subnet-0782429ac994e33e6"
          },
          "dependencies": [
            "aws_route_table.rt1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:security-group/sg-0b5e366748c7c0126",
            "description": "Webserver network traffic",
            "egress": [],
            "id": "sg-0b5e366748c7c0126",
            "ingress": [],
            "name": "webserver",
            "name_prefix": "",
            "owner_id": "991925387373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow traffic"
            },
            "tags_all": {
              "Name": "Allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-00463f5f56a77e594"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_sg_inbound_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH from anywhere",
            "from_port": 22,
            "id": "sgrule-797830514",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b5e366748c7c0126",
            "security_group_rule_id": "sgr-03331b7b489a8f8da",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_sg_inbound_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "80 from anywhere",
            "from_port": 80,
            "id": "sgrule-1727549241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b5e366748c7c0126",
            "security_group_rule_id": "sgr-0887d5466ab767488",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_sg_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-124039193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b5e366748c7c0126",
            "security_group_rule_id": "sgr-02b81df264bad2f3f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:subnet/subnet-07f665cffbd4bf980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f665cffbd4bf980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991925387373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Subnet1",
              "Type": "Public"
            },
            "vpc_id": "vpc-00463f5f56a77e594"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:subnet/subnet-0782429ac994e33e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0782429ac994e33e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991925387373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Subnet2",
              "Type": "Public"
            },
            "vpc_id": "vpc-00463f5f56a77e594"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:vpc/vpc-00463f5f56a77e594",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ca9493d308790e6",
            "default_route_table_id": "rtb-0f23b6bec1c9b136e",
            "default_security_group_id": "sg-0b188252eee449150",
            "dhcp_options_id": "dopt-03aaa6e5d00340c38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00463f5f56a77e594",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f23b6bec1c9b136e",
            "owner_id": "991925387373",
            "tags": {
              "CreatedAt": "2023-02-23",
              "Name": "VPC TERRAFORM",
              "Owner": "Douglas"
            },
            "tags_all": {
              "CreatedAt": "2023-02-23",
              "Name": "VPC TERRAFORM",
              "Owner": "Douglas"
            }
          }
        }
      ]
    }
  ]
}